k8s/istio/networking/virtualservices.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-vs
spec:
  hosts:
  - gke.devopstar.com
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        prefix: /prometheus
    route:
    - destination:
        host: prometheus-server
        port:
          number: 80
  - match:
    - uri:
        prefix: /grafana/
    route:
    - destination:
        host: grafana
        port:
          number: 80
    rewrite:
      uri: /
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  hosts:
  - gke.devopstar.com
  gateways:
  - kiali-gateway
  http:
  - match:
    - port: 15029
    route:
    - destination:
        host: kiali
        port:
          number: 20001
---
